# openmw

./: .gitignore  BtOgreExtras_8h.html  BtOgreExtras_8h_source.html  BtOgreGP_8h.html  BtOgreGP_8h_source.html  BtOgrePG_8h.html  BtOgrePG_8h_source.html  BtOgre_8cpp.html  BulletShapeLoader_8cpp.html  BulletShapeLoader_8h.html  BulletShapeLoader_8h_source.html  CMakeLists.txt  CMotionState_8cpp.html  CMotionState_8h.html  CMotionState_8h_source.html  MyGUI_1_1FactoryManager_1_1getInstance-example.html  README_Mac.md  abstractblock_8cpp.html  abstractblock_8hpp.html  abstractblock_8hpp_source.html  abstractpage_8cpp.html  abstractpage_8hpp.html  abstractpage_8hpp_source.html  abstractwidget_8cpp.html  abstractwidget_8hpp.html  abstractwidget_8hpp_source.html  action_8cpp.html  action_8hpp.html  action_8hpp_source.html  actionalchemy_8cpp.html  actionalchemy_8hpp.html  actionalchemy_8hpp_source.html  actionapply_8cpp.html  actionapply_8hpp.html  actionapply_8hpp_source.html  actiondoor_8cpp.html  actiondoor_8hpp.html  actiondoor_8hpp_source.html  actioneat_8cpp.html  actioneat_8hpp.html  (+5516 more)
apps/esmtool/: esmtool.cpp  labels.cpp  labels.hpp  record.cpp  record.hpp
apps/launcher/: datafilespage.cpp  datafilespage.hpp  graphicspage.cpp  graphicspage.hpp  main.cpp  maindialog.cpp  maindialog.hpp  playpage.cpp  playpage.hpp
apps/mwiniimporter/: importer.cpp  importer.hpp  main.cpp
apps/opencs/: CMakeLists.txt  editor.cpp  editor.hpp  esmdataitem.cpp  esmdataitem.hpp  esmdatamodel.cpp  esmdatamodel.hpp  main.cpp  opencs.cpp  opencs.hpp  opencs.ui  resources.qrc
apps/opencs/model/: activator.cpp  activator.hpp  magiceffect.cpp  magiceffect.hpp  modelitem.cpp  modelitem.hpp  potion.cpp  potion.hpp  script.cpp  script.hpp
apps/opencs/model/doc/: document.cpp  document.hpp  documentmanager.cpp  documentmanager.hpp  openfileproxymodel.cpp  openfileproxymodel.hpp  state.hpp
apps/opencs/model/esm/: activator.cpp  activator.hpp  dataitem.cpp  dataitem.hpp  esmdataitem.cpp  esmdataitem.hpp  esmfile.cpp  esmfile.hpp  magiceffect.cpp  magiceffect.hpp  potion.hpp  script.hpp
apps/opencs/model/esm/record/: activator.cpp  activator.hpp  magiceffect.cpp  magiceffect.hpp  potion.cpp  potion.hpp  script.cpp  script.hpp  setting.cpp  setting.hpp
apps/opencs/model/filter/: defaultfilter.hpp  filter.cpp  filter.hpp  filterfile.hpp  intersectionfilter.cpp  intersectionfilter.hpp  matchfilter.cpp  matchfilter.hpp  setoperationfilter.cpp  setoperationfilter.hpp  unionfilter.cpp  unionfilter.hpp
apps/opencs/model/gui/: componentitem.hpp
apps/opencs/model/tools/: mandatoryid.cpp  mandatoryid.hpp  operation.cpp  operation.hpp  reportmodel.cpp  reportmodel.hpp  stage.cpp  stage.hpp  tools.cpp  tools.hpp  verifier.cpp  verifier.hpp
apps/opencs/model/world/: columnbase.cpp  columnbase.hpp  columnimp.hpp  columns.hpp  commands.cpp  commands.hpp  data.cpp  data.hpp  idcollection.cpp  idcollection.hpp  idtable.cpp  idtable.hpp  idtableproxymodel.cpp  idtableproxymodel.hpp  record.cpp  record.hpp  refcollection.hpp  tablemimedata.cpp  universalid.cpp  universalid.hpp
apps/opencs/persistence/: esmserializer.cpp  esmserializer.hpp
apps/opencs/persistence/filter/: filterdom.cpp  filterdom.hpp
apps/opencs/resources/: defaultColumns.xml  defaultFilters.xml  resources.qrc
apps/opencs/resources/filter/: default.xml  recordTypes.xml
apps/opencs/view/: idlist.cpp  idlist.hpp  idlist.ui  idlistitemdelegate.cpp
apps/opencs/view/doc/: opendialog.cpp  opendialog.hpp  operation.cpp  operation.hpp  operations.cpp  operations.hpp  startup.cpp  startup.hpp  startupdialog.cpp  startupdialog.hpp  subview.cpp  subview.hpp  subviewfactory.cpp  subviewfactory.hpp  subviewfactoryimp.hpp  view.cpp  view.hpp  viewmanager.cpp  viewmanager.hpp
apps/opencs/view/filter/: editwidget.cpp  editwidget.hpp  filterbox.cpp  filterbox.hpp  filtereditor.cpp  filtereditor.hpp  filtereditor.ui  filtertree.cpp  filtertree.hpp  filtertree.ui  recordfilterbox.cpp  recordfilterbox.hpp
apps/opencs/view/settings/: abstractwidget.cpp  usersettingsdialog.hpp
apps/opencs/view/tools/: reportsubview.cpp  reportsubview.hpp  subviews.cpp  subviews.hpp
apps/opencs/view/world/: dialoguesubview.cpp  dialoguesubview.hpp  enumdelegate.cpp  enumdelegate.hpp  recordstatusdelegate.cpp  recordstatusdelegate.hpp  scenesubview.cpp  scenesubview.hpp  subviews.cpp  subviews.hpp  table.cpp  table.hpp  tablesubview.cpp  tablesubview.hpp  util.cpp  util.hpp  vartypedelegate.cpp  vartypedelegate.hpp
apps/opencs/viewmodel/: datamodel.cpp  datamodel.hpp  esmdatamodel.cpp  esmdatamodel.hpp  filtereditmodel.cpp  filtereditmodel.hpp  filterproxymodel.cpp  filterproxymodel.hpp  idlistfilter.cpp  idlistfilter.hpp
apps/opencs/views/: idlist.cpp  idlist.hpp  idlist.ui  idlistfilter.cpp  idlistfilter.hpp  idlistitemdelegate.cpp  idlistitemdelegate.hpp
apps/opencs/views/filter/: filtereditor.cpp  filtereditor.hpp  filtereditor.ui  filtertree.cpp  filtertree.hpp  filtertree.ui
apps/openmw/: CMakeLists.txt  engine.cpp  engine.hpp  main.cpp
apps/openmw_test_suite/: openmw_test_suite.cpp
cmake/: FindMyGUI.cmake
components/: CMakeLists.txt
components/bsa/: bsa_archive.cpp  bsa_archive.hpp  bsa_file.cpp  bsa_file.hpp
components/compiler/: context.hpp  controlparser.cpp  controlparser.hpp  errorhandler.cpp  errorhandler.hpp  exception.hpp  exprparser.cpp  exprparser.hpp  extensions.cpp  extensions.hpp  extensions0.cpp  fileparser.cpp  fileparser.hpp  generator.cpp  generator.hpp  lineparser.cpp  literals.cpp  (+19 more)
files/: settings-default.cfg  userdefaults-default.cfg
(+700 files in other folders)
